more encryptions added

--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,8 @@ db.sqlite3
 .DS_Store
 
 # Certificate and key files
-cert.crt
-cert.key
+/cert.crt
+/cert.key
 
 # (Optional) Ignore any other certs/keys by extension
 *.crt
